gcc/testsuite/rust/rustc/ui/parser/issues/diagnostics-parenthesized-type-arguments-issue-120892-3.rs
struct Foo(u32, u32);
impl Foo {
    fn foo(&self) {
        match *self {
            Foo::(1, 2) => {}, // { help "" "" { target *-*-* } }
// { dg-note "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-note "" "" { target *-*-* } .-3 }
             _ => {},
        }
    }
}

fn main() {}

